# footballapi

./: README.md  pyproject.toml
src/footballapi/: __init__.py  __main__.py  normalize.py  providers.py  server.py  service.py
tests/footballapi/: test_providers.py  test_service.py
